# rubik3d

./: .gitignore  1.txt  2.txt  CMakeLists.txt  README.md  RTH3d_obs.cpp  RTH3d_obs.hpp  common.cpp  common.hpp  data2d.json  demo.txt  demo2.txt  demo3.txt  formation.cpp  formation.hpp  ilp3d.cpp  ilp3d.hpp  labp.cpp  labp.hpp  main.cpp  mp3d.cpp  mp3d.hpp  rth2d.cpp  rth2d.hpp  rubik3d.cpp  rubik3d.hpp  search.cpp  search.hpp  test  test.cpp  test.txt  umapf2d.cpp  umapf2d.hpp  umapf3d.cpp  umapf3d.hpp
python/: database.py  ecbs3d  generator.py  get_db.py  ilp_cfc.py  ilp_robust.py  post.py  problem_generator.py  rth3d  rthlba  run.py  test.scen  test.txt  trans.py  trans_kiva.py
python/data/already/ecbs3d/: 3x3_0.txt  3x3_1.txt  3x3_10.txt  3x3_11.txt  3x3_12.txt  3x3_13.txt  3x3_14.txt  3x3_15.txt  3x3_16.txt  3x3_17.txt  3x3_18.txt  3x3_19.txt  3x3_2.txt  3x3_3.txt  3x3_4.txt  3x3_5.txt  3x3_6.txt  3x3_7.txt  3x3_8.txt  3x3_9.txt  9x9_0.txt  9x9_1.txt  9x9_10.txt  9x9_11.txt  9x9_12.txt  9x9_13.txt  9x9_14.txt  9x9_15.txt  9x9_16.txt  9x9_17.txt  9x9_18.txt  9x9_19.txt  9x9_2.txt  9x9_3.txt  9x9_4.txt  9x9_5.txt  9x9_6.txt  9x9_7.txt  9x9_8.txt  9x9_9.txt
python/data/already/rth3d/: 15x15_0.txt  15x15_1.txt  15x15_10.txt  15x15_11.txt  15x15_12.txt  15x15_13.txt  15x15_14.txt  15x15_15.txt  15x15_16.txt  15x15_17.txt  15x15_18.txt  15x15_19.txt  15x15_2.txt  15x15_3.txt  15x15_4.txt  15x15_5.txt  15x15_6.txt  15x15_7.txt  15x15_8.txt  15x15_9.txt  21x21_0.txt  21x21_1.txt  21x21_10.txt  21x21_11.txt  21x21_12.txt  21x21_13.txt  21x21_14.txt  21x21_15.txt  21x21_16.txt  21x21_17.txt  21x21_18.txt  21x21_19.txt  21x21_2.txt  21x21_3.txt  21x21_4.txt  21x21_5.txt  21x21_6.txt  21x21_7.txt  21x21_8.txt  21x21_9.txt  (+93 more)
python/data/quasi_random/ecbs3d/: 3x3_0.txt  3x3_1.txt  3x3_10.txt  3x3_12.txt  3x3_13.txt  3x3_15.txt  3x3_16.txt  3x3_17.txt  3x3_18.txt  3x3_19.txt  3x3_3.txt  3x3_4.txt  3x3_5.txt  3x3_6.txt  3x3_7.txt  9x9_0.txt  9x9_1.txt  9x9_10.txt  9x9_11.txt  9x9_12.txt  9x9_13.txt  9x9_14.txt  9x9_15.txt  9x9_16.txt  9x9_17.txt  9x9_18.txt  9x9_19.txt  9x9_2.txt  9x9_3.txt  9x9_4.txt  9x9_5.txt  9x9_6.txt  9x9_7.txt  9x9_8.txt  9x9_9.txt
python/data/quasi_random/rth3d/: 15x15_1.txt  15x15_10.txt  15x15_11.txt  15x15_13.txt  15x15_14.txt  15x15_15.txt  15x15_3.txt  15x15_5.txt  15x15_6.txt  15x15_9.txt  21x21_0.txt  21x21_1.txt  21x21_10.txt  21x21_12.txt  21x21_16.txt  21x21_17.txt  21x21_5.txt  21x21_6.txt  21x21_7.txt  21x21_8.txt  21x21_9.txt  30x30_0.txt  30x30_10.txt  30x30_12.txt  30x30_14.txt  30x30_15.txt  30x30_16.txt  30x30_17.txt  30x30_19.txt  30x30_2.txt  30x30_3.txt  30x30_4.txt  30x30_6.txt  30x30_7.txt  30x30_8.txt  30x30_9.txt  3x3_0.txt  3x3_11.txt  3x3_13.txt  3x3_16.txt  (+42 more)
python/data/random/: proc.py
python/data/random_flatK6/: proc.py
(+788 files in other folders)
